[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Gamer.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Gamer.ttf"

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="StartScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="WhiteBackground" type="ColorRect" parent="."]
margin_right = 516.274
margin_bottom = 516.274
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="."]
margin_left = 1.0
margin_top = 72.0
margin_right = 517.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Treasure and Ice"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyName" type="Label" parent="."]
margin_left = 1.0
margin_top = 146.0
margin_right = 519.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A Ludum Dare 49 game
By Joshua Dyer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayer" type="Button" parent="."]
pause_mode = 2
anchor_top = -0.0722892
anchor_bottom = -0.0722892
margin_left = 209.978
margin_top = 220.527
margin_right = 309.978
margin_bottom = 240.527
text = "Single Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwoPlayer" type="Button" parent="."]
pause_mode = 2
anchor_top = -0.0240964
anchor_bottom = -0.0240964
margin_left = 209.978
margin_top = 244.527
margin_right = 309.978
margin_bottom = 264.527
text = "Two Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreePlayer" type="Button" parent="."]
pause_mode = 2
anchor_top = 0.0261044
anchor_bottom = 0.0261044
margin_left = 209.978
margin_top = 269.527
margin_right = 309.978
margin_bottom = 289.527
text = "Three Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FourPlayer" type="Button" parent="."]
pause_mode = 2
anchor_top = 0.0763052
anchor_bottom = 0.0763052
margin_left = 209.978
margin_top = 294.527
margin_right = 309.978
margin_bottom = 314.527
text = "Four Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Position" type="Position2D" parent="."]
position = Vector2( 260, 216 )

[connection signal="pressed" from="SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="TwoPlayer" to="." method="_on_TwoPlayer_pressed"]
[connection signal="pressed" from="ThreePlayer" to="." method="_on_ThreePlayer_pressed"]
[connection signal="pressed" from="FourPlayer" to="." method="_on_FourPlayer_pressed"]
